--- a/src/IdentityService/Pages/Account/Register/Index.cshtml
+++ b/src/IdentityService/Pages/Account/Register/Index.cshtml
@@ -11,8 +11,56 @@
                     <h2>Register</h2>
                 </div>
                 <div class="card-body">
-                    Form goes here
+                    <form asp-page="/Account/Register/Index">
+                            <input type="hidden" asp-for="Input.ReturnUrl" />
+
+                            <div class="form-group">
+                                <label asp-for="Input.Username"></label>
+                                <input class="form-control" placeholder="Username" asp-for="Input.Username" autofocus>
+                            </div>
+
+                            <div class="form-group">
+                                <label asp-for="Input.Email"></label>
+                                <input class="form-control" placeholder="Email" asp-for="Input.Email">
+                            </div>
+
+                            <div class="form-group">
+                                <label asp-for="Input.FullName"></label>
+                                <input class="form-control" placeholder="FullName" asp-for="Input.FullName">
+                            </div>
+
+                            <div class="form-group">
+                                <label asp-for="Input.Password"></label>
+                                <input type="password" class="form-control" placeholder="Password" asp-for="Input.Password" autocomplete="off">
+                            </div>
+                            
+                            @* @if (Model.View.AllowRememberLogin)
+                            {
+                                <div class="form-group">
+                                    <div class="form-check">
+                                        <input class="form-check-input" asp-for="Input.RememberLogin">
+                                        <label class="form-check-label" asp-for="Input.RememberLogin">
+                                            Remember My Login
+                                        </label>
+                                    </div>
+                                </div>
+                            } *@
+
+                            <a class="pb-2 d-block" asp-page="../Login/Index" asp-route-returnUrl="@Model.Input.ReturnUrl">
+                                Already registered? Login here
+                            </a>
+                            
+                            <button class="btn btn-primary" name="Input.Button" value="register">Register</button>
+                            <button class="btn btn-secondary" name="Input.Button" value="cancel">Cancel</button>
+                        </form>
                 </div>
+
+                @if(Model.RegisterSuccess)
+                {
+                    <div class="alert alert-success mt-2">
+                        <strong>Successfully registered</strong> - You can now login
+                    </div>
+                }
             </div>
         </div>
     </div>
